# meadow

./: .env  .gitignore  Makefile  README  README.md  gleam.toml  manifest.toml
lib/: Cargo.toml
lib/src/: lib.rs
meadow_page/: .gitignore  Cargo.toml
meadow_page/src/: lib.rs
meadow_page/src/mod/: meadow_page.rs  script.rs
src/: erlfile_ffi.erl  lib_ffi.erl  meadow.gleam  meadow_ffi.erl  meadow_page_ffi.erl
src/internal/: config.gleam  meadowfile.gleam
src/meadow/: config.gleam  meadowfile.gleam
